--- a/test/EFCore.MySql.IntegrationTests/EFCore.MySql.IntegrationTests.csproj
+++ b/test/EFCore.MySql.IntegrationTests/EFCore.MySql.IntegrationTests.csproj
@@ -10,6 +10,8 @@
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
     <ThreadPoolMinThreads>64</ThreadPoolMinThreads>
     <RootNamespace>Pomelo.EntityFrameworkCore.MySql.IntegrationTests</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
